cmake_minimum_required(VERSION 3.0)
project( VisualMatching )
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
find_package( OpenCV REQUIRED )
find_package(Boost 1.36.0 COMPONENTS filesystem program_options )
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( visual_alignment visual_alignment.cpp VisualAlignment.cpp VisualAlignmentUtils.cpp )
add_executable( sfm sfm.cpp VisualAlignment.cpp VisualAlignmentUtils.cpp )
target_link_libraries( visual_alignment ${OpenCV_LIBS} Eigen3::Eigen Boost::filesystem Boost::program_options)
target_link_libraries( sfm ${OpenCV_LIBS} Eigen3::Eigen Boost::filesystem Boost::program_options)
